# codex-d

./: .env.example  .gitignore  Cargo.toml  E2E_EXPERIENCE.md  EXPERIENCE.md  IMPLEMENTATION_PLAN.md  MESSAGING_FLOW.md  README.md  USER_JOURNEY.md
mcp-servers/mcp_codex_psychology/: .env.example  requirements.txt  run_sse_server.py  run_stdio_server.py
mcp-servers/mcp_codex_psychology/mcp_server/: __init__.py  aikido_integration.py  database.py  server.py
mcp-servers/mcp_codex_psychology/tests/: direct_upload.py  get_profile.py  get_user_token.py  list_files.py  query_vault.py  test_all_ids.py  test_combinations.py  test_kontext_upload.py  upload_correct.py  upload_json.py
src/: codex_adapter.rs  git_analyzer.rs  main.rs  storage.rs  types.rs
src/ui/: components.rs  mod.rs  timeline.rs
