[package]
name = "codex-d"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI
gpui = "0.2"

# Git analysis
git2 = "0.19"

# Async
tokio = { version = "1.41", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
